--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "axios": "^0.27.2",
     "dayjs": "^1.11.2",
     "generate-password": "^1.7.0",
+    "jsdom": "^19.0.0",
     "lodash": "^4.17.21",
     "next": "12.1.4",
     "next-remove-imports": "^1.0.6",
+    "query-string": "^7.1.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-markdown": "^8.0.3",
@@ -31,6 +33,7 @@
     "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
+    "@types/jsdom": "^16.2.14",
     "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.31",
     "@types/react": "18.0.1",
