--- a/.env-exemple
+++ b/.env-exemple
@@ -1,3 +1,3 @@
-DATABASE_URL=
-NEXT_PUBLIC_URL_LIVE=
-CRON_KEY=
+DATABASE_URL=string
+NEXT_PUBLIC_CHRONICLE_LIMIT=number
+NEXT_PUBLIC_MEDIA_LIMIT=number
