--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-player": "^2.10.1",
     "react-select": "^5.3.2",
     "react-toastify": "^9.0.1",
-    "socket.io-client": "^4.5.1"
+    "socket.io-client": "^4.5.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/jsdom": "^16.2.14",
