--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.31",
     "@types/react": "18.0.1",
+    "@types/uuid": "^8.3.4",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
     "prisma": "^3.14.0"
