--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-select": "^5.3.2",
     "react-toastify": "^9.0.1",
     "socket.io-client": "^4.5.1",
+    "tmi.js": "^1.8.5",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
